@@ -56,7 +56,7 @@ public class LegacyApacheHttpClientInstrumentation extends BaseApacheHttpClientI
     public static class LegacyApacheHttpClientAdvice {
         @Nullable
         @Advice.OnMethodEnter(suppress = Throwable.class, inline = false)
-        public static Object onBeforeExecute(@Advice.Argument(0) HttpHost host,
+        public static Object onBeforeExecute(@Advice.Argument(0) @Nullable HttpHost host,
                                              @Advice.Argument(1) HttpRequest request) {
             final AbstractSpan<?> parent = tracer.getActive();
             if (parent == null) {
@@ -66,7 +66,8 @@ public class LegacyApacheHttpClientInstrumentation extends BaseApacheHttpClientI
                 return null;
             }
             HttpUriRequest uriRequest = (HttpUriRequest) request;
-            Span span = HttpClientHelper.startHttpClientSpan(parent, uriRequest.getMethod(), uriRequest.getURI(), host.getHostName());
+            String hostName = (host != null) ? host.getHostName() : null;
+            Span span = HttpClientHelper.startHttpClientSpan(parent, uriRequest.getMethod(), uriRequest.getURI(), hostName);
             if (span != null) {
                 span.activate();
                 span.propagateTraceContext(request, RequestHeaderAccessor.INSTANCE);
