@@ -68,6 +68,7 @@ Even when matching on the main class name or on system properties,
 * Fix apm-log4j1-plugin and apm-log4j2-plugin dependency on slf4j - {pull}1723[#1723]
 * Avoid systematic `MessageNotWriteableException` error logging, now only visible in `debug` - {pull}1715[#1715]
 * Fix rounded number format for non-english locales - {pull}1728[#1728]
+* Fix `NullPointerException` on legacy Apache client instrumentation when host is `null` - {pull}1746[#1746]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
